atualização de produtos e botão whatsApp

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
   <script>document.documentElement.classList.add("js");</script>
 </head>
 
-<body>
+<body style="position: relative;">
+  <a id="whats" href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
   <div class="top-dados-menu">
     <div class="dados-do-topo">
       <div class="icons">
-        <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+        <a href="https://www.instagram.com/picole_quebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
         <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
         <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
         <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
@@ -51,7 +52,10 @@
     </div>
     <header class="menu">
       <nav>
-        <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+        <div class="containerLogo">
+          <img class="logoTipo" src="/imgs/fotos/LOGO_PICOLE.png" alt="">
+          <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+        </div>
         <ul>
           <li><a href="/paginas/sobre.html">sobre</a></li>
           <li><a href="/paginas/produtos.html">produtos</a></li>
@@ -63,19 +67,19 @@
   </div>
   <div data-slide="principal">
     <ul class="slide">
-      <li><img src="/imgs/fotos/daniel-lincoln.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/gui-noseslide.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/camuflado.png" alt="" /></li>
+      <li><img src="/imgs/fotos/visagem.jpg" alt="" /></li>
+    </ul>
+    <ul class="slide">
+      <li><img src="/imgs/fotos//latino-rock.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/graffity-colors.png" alt="" /></li>
+      <li><img src="/imgs/fotos/robson-smith.jpg" alt="" /></li>
+    </ul>
+    <ul class="slide">
       <li><img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos/tom-morbey.jpg" alt="" /></li>
-    </ul>
-    <ul class="slide">
-      <li><img src="/imgs/fotos/oscar.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos/niket-nigde-9N3rS-xLfkI-unsplash.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos/alexander-londono-MAe6R6siGYQ-unsplash.jpg" alt="" /></li>
-    </ul>
-    <ul class="slide">
-      <li><img src="/imgs/fotos/daniel-lincoln-Sj87XsPs4b4-unsplash.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos/yeshi-kangrang-8diGsOyqwHQ-unsplash.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos//alexander-londono-ApPIboUsOOY-unsplash.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/graffiti-muro.png" alt="" /></li>
+      <li><img src="/imgs/fotos/nino.jpg" alt="" /></li>
     </ul>
   </div>
 
@@ -95,7 +99,7 @@
         <img src="/imgs/produtos/shapes/camuflado (1).png" alt="" srcset="">
         <div class="price">
           <p>marfim</p>
-          <span>R$ 167,90</span>
+          <span>R$ 220,00</span>
         </div>
       </div>
       <div class="shape cards-item">
@@ -103,7 +107,7 @@
         <img src="/imgs/produtos/shapes/graffiti (1).png" alt="" srcset="">
         <div class="price">
           <p>marfim</p>
-          <span>R$ 167,90</span>
+          <span>R$ 220,00</span>
         </div>
       </div>
       <div class="shape cards-item">
@@ -111,7 +115,7 @@
         <img src="/imgs/produtos/shapes/MUROGRAFITTI 1 (1).png" alt="" srcset="">
         <div class="price">
           <p>marfim</p>
-          <span>R$ 167,90</span>
+          <span>R$ 220,00</span>
         </div>
       </div>
       <div class="shape cards-item">
@@ -122,14 +126,7 @@
           <span>R$ 45,90</span>
         </div>
       </div>
-      <div class="shape cards-item">
-        <h1>Anti Action</h1>
-        <img src="/imgs/produtos/shapes/anti.jpg" alt="" srcset="">
-        <div class="price">
-          <p>marfim</p>
-          <span>R$ 109,90</span>
-        </div>
-      </div>
+      
       <div class="shape cards-item">
         <h1>Anti Action</h1>
         <img src="/imgs/produtos/shapes/anti2.jpg" alt="" srcset="">
@@ -138,32 +135,6 @@
           <span>R$ 109,90</span>
         </div>
       </div>
-      <div class="shape cards-item">
-        <h1>Anti Action</h1>
-        <img src="/imgs/produtos/shapes/maryjane.jpg" alt="" srcset="">
-        <div class="price">
-          <p>marfim</p>
-          <span>R$ 109,90</span>
-        </div>
-      </div>
-      <div class="rolamento cards-item">
-        <h1>Anti Action</h1>
-        <img src="/imgs/produtos/shapes/sistem.jpg" alt="" srcset="">
-        <div class="price">
-          <p>marfim</p>
-          <span>R$ 109,90</span>
-        </div>
-
-      </div>
-      <div class="truck cards-item">
-        <h1>Skate montado</h1>
-        <img src="/imgs/produtos/shapes/skatemontado.jpg" alt="" srcset="">
-        <div class="price">
-          <p>Semi Profissional</p>
-          <span>R$ 341,90</span>
-        </div>
-
-      </div>
       <div class="truck cards-item">
         <h1>Parafuso de base</h1>
         <img src="/imgs/produtos/parafuso/parafuso.jpg" alt="" srcset="">
@@ -171,35 +142,8 @@
           <p>com chave</p>
           <span>R$ 27,90</span>
         </div>
-
       </div>
-      <div class="truck cards-item">
-        <h1>Amortecedor</h1>
-        <img src="/imgs/produtos/amortecedor/amortecedor.jpg" alt="" srcset="">
-        <div class="price">
-          <p>kit completo</p>
-          <span>R$ 35,90</span>
-        </div>
-
-      </div>
-      <div class="truck cards-item">
-        <h1>Amortecedor</h1>
-        <img src="/imgs/produtos/amortecedor/amortecedo.jpg" alt="" srcset="">
-        <div class="price">
-          <p>kit completo</p>
-          <span>R$ 35,90</span>
-        </div>
-
-      </div>
-      <div class="truck cards-item">
-        <h1>Amortecedor</h1>
-        <img src="/imgs/produtos/amortecedor/amoretecedores.jpg" alt="" srcset="">
-        <div class="price">
-          <p>kit completo</p>
-          <span>R$ 35,90</span>
-        </div>
-
-      </div>
+      
       <div class="truck cards-item">
         <h1>Rolamento abec 9</h1>
         <img src="/imgs/produtos/rolamento/abec9.jpg" alt="" srcset="">
@@ -210,28 +154,10 @@
 
       </div>
       <div class="truck cards-item">
-        <h1>Rolamento abec 9</h1>
-        <img src="/imgs/produtos/rolamento/abecs.jpg" alt="" srcset="">
-        <div class="price">
-          <p>kit com 8</p>
-          <span>R$ 45,90</span>
-        </div>
-
-      </div>
-      <div class="truck cards-item">
-        <h1>Rolamento abec 9</h1>
-        <img src="/imgs/produtos/rolamento/abec9s.jpg" alt="" srcset="">
-        <div class="price">
-          <p>kit com 8</p>
-          <span>R$ 45,90</span>
-        </div>
-
-      </div>
-      <div class="truck cards-item">
         <h1>Rolamento Bones Reds</h1>
         <img src="/imgs/produtos/rolamento/bonesbill.jpg" alt="" srcset="">
         <div class="price">
-          <p>BIG BILLS</p>
+          <p>BIG BALLS</p>
           <span>R$ 145,90</span>
         </div>
 
@@ -255,22 +181,12 @@
 
       </div>
       <div class="truck cards-item">
-        <h1>Rolamento Bones Swiss</h1>
-        <img src="/imgs/produtos/rolamento/bonesswiiss.gif" alt="" srcset="">
-        <div class="price">
-          <p>SWISS</p>
-          <span>R$ 151,90</span>
-        </div>
-
-      </div>
-      <div class="truck cards-item">
         <h1>Rolamento Independent</h1>
         <img src="/imgs/produtos/rolamento/independent.jpg" alt="" srcset="">
         <div class="price">
           <p>INDEPENDENT</p>
           <span>R$ 155,90</span>
         </div>
-
       </div>
       <div class="truck cards-item">
         <h1>Rolamento Spitfire</h1>
@@ -279,8 +195,22 @@
           <p>CLASSICS</p>
           <span>R$ 160,90</span>
         </div>
-
-
+      </div>
+      <div class="truck cards-item">
+        <h1>Lixa Nacional</h1>
+        <img src="/imgs/fotos/lixavinho.jpg" alt="" srcset="">
+        <div class="price">
+          <p>vinho</p>
+          <span>R$ 30,00</span>
+        </div>
+      </div>
+      <div class="truck cards-item">
+        <h1>Lixa Emborrachada</h1>
+        <img src="/imgs/fotos/lixavinho.jpg" alt="" srcset="">
+        <div class="price">
+          <p>vinho</p>
+          <span>R$ 60,00</span>
+        </div>
       </div>
   </section>
 
