--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
+  <a id="whats" href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
   <div class="top-dados-menu">
     <div class="dados-do-topo">
       <div class="icons">
-        <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+        <a href="https://www.instagram.com/picole_quebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
         <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
         <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
         <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
@@ -50,7 +51,10 @@
     </div>
     <header class="menu">
       <nav>
-        <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+        <div class="containerLogo">
+          <img class="logoTipo" src="/imgs/fotos/LOGO_PICOLE.png" alt="">
+          <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+        </div>
         <ul>
           <li><a href="/index.html">home</a></li>
           <li><a href="/paginas/sobre.html">sobre</a></li>
@@ -66,7 +70,7 @@
           <img src="/imgs/produtos/shapes/camuflado (1).png" alt="" srcset="">
           <div class="price">
             <p>marfim</p>
-            <span>R$ 167,90</span>
+            <span>R$ 220,00</span>
           </div>
         </div>
         <div class="shape cards-item">
@@ -74,7 +78,7 @@
           <img src="/imgs/produtos/shapes/graffiti (1).png" alt="" srcset="">
           <div class="price">
             <p>marfim</p>
-            <span>R$ 167,90</span>
+            <span>R$ 220,00</span>
           </div>
         </div>
         <div class="shape cards-item">
@@ -82,17 +86,18 @@
           <img src="/imgs/produtos/shapes/MUROGRAFITTI 1 (1).png" alt="" srcset="">
           <div class="price">
             <p>marfim</p>
-            <span>R$ 167,90</span>
+            <span>R$ 220,00</span>
           </div>
         </div>
         <div class="shape cards-item">
-          <h1>Anti Action</h1>
-          <img src="/imgs/produtos/shapes/anti.jpg" alt="" srcset="">
+          <h1>Boné Picolé Quebrado</h1>
+          <img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" srcset="">
           <div class="price">
-            <p>marfim</p>
-            <span>R$ 109,90</span>
+            <p>telado</p>
+            <span>R$ 45,90</span>
           </div>
         </div>
+        
         <div class="shape cards-item">
           <h1>Anti Action</h1>
           <img src="/imgs/produtos/shapes/anti2.jpg" alt="" srcset="">
@@ -101,32 +106,6 @@
             <span>R$ 109,90</span>
           </div>
         </div>
-        <div class="shape cards-item">
-          <h1>Anti Action</h1>
-          <img src="/imgs/produtos/shapes/maryjane.jpg" alt="" srcset="">
-          <div class="price">
-            <p>marfim</p>
-            <span>R$ 109,90</span>
-          </div>
-        </div>
-        <div class="rolamento cards-item">
-          <h1>Anti Action</h1>
-          <img src="/imgs/produtos/shapes/sistem.jpg" alt="" srcset="">
-          <div class="price">
-            <p>marfim</p>
-            <span>R$ 109,90</span>
-          </div>
-
-        </div>
-        <div class="truck cards-item">
-          <h1>Skate montado</h1>
-          <img src="/imgs/produtos/shapes/skatemontado.jpg" alt="" srcset="">
-          <div class="price">
-            <p>Semi Profissional</p>
-            <span>R$ 341,90</span>
-          </div>
-
-        </div>
         <div class="truck cards-item">
           <h1>Parafuso de base</h1>
           <img src="/imgs/produtos/parafuso/parafuso.jpg" alt="" srcset="">
@@ -134,35 +113,8 @@
             <p>com chave</p>
             <span>R$ 27,90</span>
           </div>
-
         </div>
-        <div class="truck cards-item">
-          <h1>Amortecedor</h1>
-          <img src="/imgs/produtos/amortecedor/amortecedor.jpg" alt="" srcset="">
-          <div class="price">
-            <p>kit completo</p>
-            <span>R$ 35,90</span>
-          </div>
-
-        </div>
-        <div class="truck cards-item">
-          <h1>Amortecedor</h1>
-          <img src="/imgs/produtos/amortecedor/amortecedo.jpg" alt="" srcset="">
-          <div class="price">
-            <p>kit completo</p>
-            <span>R$ 35,90</span>
-          </div>
-
-        </div>
-        <div class="truck cards-item">
-          <h1>Amortecedor</h1>
-          <img src="/imgs/produtos/amortecedor/amoretecedores.jpg" alt="" srcset="">
-          <div class="price">
-            <p>kit completo</p>
-            <span>R$ 35,90</span>
-          </div>
-
-        </div>
+        
         <div class="truck cards-item">
           <h1>Rolamento abec 9</h1>
           <img src="/imgs/produtos/rolamento/abec9.jpg" alt="" srcset="">
@@ -170,34 +122,16 @@
             <p>kit com 8</p>
             <span>R$ 45,90</span>
           </div>
-
-        </div>
-        <div class="truck cards-item">
-          <h1>Rolamento abec 9</h1>
-          <img src="/imgs/produtos/rolamento/abecs.jpg" alt="" srcset="">
-          <div class="price">
-            <p>kit com 8</p>
-            <span>R$ 45,90</span>
-          </div>
-
-        </div>
-        <div class="truck cards-item">
-          <h1>Rolamento abec 9</h1>
-          <img src="/imgs/produtos/rolamento/abec9s.jpg" alt="" srcset="">
-          <div class="price">
-            <p>kit com 8</p>
-            <span>R$ 45,90</span>
-          </div>
-
+  
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Bones Reds</h1>
           <img src="/imgs/produtos/rolamento/bonesbill.jpg" alt="" srcset="">
           <div class="price">
-            <p>BIG BILLS</p>
+            <p>BIG BALLS</p>
             <span>R$ 145,90</span>
           </div>
-
+  
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Bones Reds</h1>
@@ -206,7 +140,7 @@
             <p>BONES REDS</p>
             <span>R$ 145,90</span>
           </div>
-
+  
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Bones Super</h1>
@@ -215,16 +149,7 @@
             <p>SUPER</p>
             <span>R$ 145,90</span>
           </div>
-
-        </div>
-        <div class="truck cards-item">
-          <h1>Rolamento Bones Swiss</h1>
-          <img src="/imgs/produtos/rolamento/bonesswiiss.gif" alt="" srcset="">
-          <div class="price">
-            <p>SWISS</p>
-            <span>R$ 151,90</span>
-          </div>
-
+  
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Independent</h1>
@@ -233,7 +158,6 @@
             <p>INDEPENDENT</p>
             <span>R$ 155,90</span>
           </div>
-
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Spitfire</h1>
@@ -242,8 +166,22 @@
             <p>CLASSICS</p>
             <span>R$ 160,90</span>
           </div>
-
-
+        </div>
+        <div class="truck cards-item">
+          <h1>Lixa Nacional</h1>
+          <img src="/imgs/fotos/lixavinho.jpg" alt="" srcset="">
+          <div class="price">
+            <p>vinho</p>
+            <span>R$ 30,00</span>
+          </div>
+        </div>
+        <div class="truck cards-item">
+          <h1>Lixa Emborrachada</h1>
+          <img src="/imgs/fotos/lixavinho.jpg" alt="" srcset="">
+          <div class="price">
+            <p>vinho</p>
+            <span>R$ 60,00</span>
+          </div>
         </div>
     </section>
     <footer>
