--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
+  <a id="whats" href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
   <div class="top-dados-menu">
     <div class="dados-do-topo">
       <div class="icons">
-        <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+        <a href="https://www.instagram.com/picole_quebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
         <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
         <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
         <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
@@ -50,7 +51,10 @@
     </div>
     <header class="menu">
       <nav>
-        <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+        <div class="containerLogo">
+          <img class="logoTipo" src="/imgs/fotos/LOGO_PICOLE.png" alt="">
+          <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+        </div>
         <ul>
           <li><a href="/index.html">home</a></li>
           <li><a href="/paginas/produtos.html">produtos</a></li>
