--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>Picole quebrado | home</title>
   <link rel="shortcut icon" href="/favicon_io/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
@@ -15,13 +15,13 @@
 </head>
 
 <body style="position: relative;">
-  <a id="whats" href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
+  <a id="whats" href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
   <div class="top-dados-menu">
     <div class="dados-do-topo">
       <div class="icons">
         <a href="https://www.instagram.com/picole_quebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
         <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
-        <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+        <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
         <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
       </div>
       <div class="icons">
@@ -38,13 +38,13 @@
           </a>
         </div>
         <div>
-          <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
+          <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
           <a href="tel:+5591982066009">
             <p>(91) 98206-6009</p>
           </a>
         </div>
         <div>
-          <a href="tel:+5594991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
+          <a href="https://wa.me/+5594991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
           <a href="tel:+5594991746944">
             <p>(94) 99174-6944</p>
           </a>
@@ -69,27 +69,29 @@
   <div data-slide="principal">
     <ul class="slide">
       <li><img src="/imgs/fotos/gui-noseslide.jpg" alt="" /></li>
+      <li><img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" /></li>
+    </ul>
+    <ul class="slide">
+      <li><img src="/imgs/fotos/latino-rock.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/graffity-colors.png" alt="" /></li>
+    </ul>
+    <ul class="slide">
+      <li><img src="/imgs/fotos/robson-smith.jpg" alt="" /></li>
+      <li><img src="/imgs/fotos/graffiti-muro.png" alt="" /></li>
+    </ul>
+    <ul class="slide">
+      <li><img src="/imgs/fotos/nino.jpg" alt="" /></li>
       <li><img src="/imgs/fotos/camuflado.png" alt="" /></li>
       <li><img src="/imgs/fotos/visagem.jpg" alt="" /></li>
-    </ul>
-    <ul class="slide">
-      <li><img src="/imgs/fotos//latino-rock.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos/graffity-colors.png" alt="" /></li>
-      <li><img src="/imgs/fotos/robson-smith.jpg" alt="" /></li>
-    </ul>
-    <ul class="slide">
-      <li><img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos/graffiti-muro.png" alt="" /></li>
-      <li><img src="/imgs/fotos/nino.jpg" alt="" /></li>
     </ul>
   </div>
 
   <section class="lancamentos">
     <h1>NOVOS SHAPES LANÇADOS</h1>
     <div>
-      <img src="/imgs/produtos/graffiti.png" alt="" />
-      <img src="/imgs/produtos/camuflado.png" alt="" />
-      <img src="/imgs/produtos/MUROGRAFITTI 1.png" alt="" />
+      <img src="/imgs/produtos/shapes/graffiti (1).png" alt="" />
+      <img src="/imgs/produtos/shapes/camuflado (1).png" alt="" />
+      <img src="/imgs/produtos/shapes/MUROGRAFITTI 1 (1).png" alt="" />
     </div>
   </section>
   <section class="produtos">
@@ -99,7 +101,7 @@
         <h1>Picolé Quebrado</h1>
         <img src="/imgs/produtos/shapes/camuflado (1).png" alt="" srcset="">
         <div class="price">
-          <p>marfim</p>
+          <p>maple</p>
           <span>R$ 220,00</span>
         </div>
       </div>
@@ -107,7 +109,7 @@
         <h1>Picolé Quebrado</h1>
         <img src="/imgs/produtos/shapes/graffiti (1).png" alt="" srcset="">
         <div class="price">
-          <p>marfim</p>
+          <p>maple</p>
           <span>R$ 220,00</span>
         </div>
       </div>
@@ -115,7 +117,7 @@
         <h1>Picolé Quebrado</h1>
         <img src="/imgs/produtos/shapes/MUROGRAFITTI 1 (1).png" alt="" srcset="">
         <div class="price">
-          <p>marfim</p>
+          <p>maple</p>
           <span>R$ 220,00</span>
         </div>
       </div>
@@ -260,7 +262,7 @@
             <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
           </li>
           <li>
-            <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+            <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
           </li>
           <li>
             <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
