--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>Picole quebrado | sobre</title>
   <link rel="shortcut icon" href="/favicon_io/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/style.css" />
@@ -14,13 +14,13 @@
 </head>
 
 <body>
-  <a id="whats" href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
+  <a id="whats" href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
   <div class="top-dados-menu">
     <div class="dados-do-topo">
       <div class="icons">
         <a href="https://www.instagram.com/picole_quebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
         <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
-        <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+        <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
         <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
       </div>
       <div class="icons">
@@ -37,13 +37,13 @@
           </a>
         </div>
         <div>
-          <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
+          <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
           <a href="tel:+5591982066009">
             <p>(91) 98206-6009</p>
           </a>
         </div>
         <div>
-          <a href="tel:+5594991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
+          <a href="https://wa.me/+5591991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
           <a href="tel:+5594991746944">
             <p>(94) 99174-6944</p>
           </a>
@@ -152,7 +152,7 @@
               <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="tel:+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+              <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
             </li>
             <li>
               <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
